# Spectroscopy

./: .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  README.md
2DIR/: 2dir_fluc.f90  data_mods.f90  makefile  read_input.f90  spec_calc.f90
2DIR_OLD/: 2dir_fluc.f90  data_mods.f90  makefile  read_field.f90  tcf.f90
IR/: ir_calc.f90  makefile  read_field.f90  read_input.f90  spec_calc.f90  spectral_histogram.f90  tcf.f90
Mapping/: mapping_module.f90
Python/: average_spectra.py
RAMAN/: data_mods.f90  raman_calc.f90  read_field.f90  read_input.f90  spec_calc.f90  tcf.f90
SFG/: constants.f  data_mods.f90  ft_calc_only.f90  hist_calc.f90  read_eners.f90  read_field.f90  read_input.f90  sfg_calc.f90  spec_calc.f90  tcf.f90
SFG_OLD/: makefile  read_input.f90  spectra_fluc.f90  tcf.f90
examples/: empirical_map.in  spce_map.in  spectra.in  tip3p_map.in
src/: CMakeLists.txt
src/2DIR/: 2dir_calc.f90  2dir_fluc.f90  CMakeLists.txt  makefile  read_field.f90  read_input.f90  spec_calc.f90  tcf.f90
src/FFCF/: CMakeLists.txt  ffcf.f90  ffcf_calc.f90  read_field.f90
src/FREQUENCY/: CMakeLists.txt  freq_calc.f90
src/IR/: CMakeLists.txt  data_mods.f90  ir_calc.f90  read_input.f90  spec_calc.f90  spectral_histogram.f90
src/Python/: average_dirs.py
src/Raman/: CMakeLists.txt  raman_calc.f90  read_input.f90  spec_calc.f90
src/SFG/: CMakeLists.txt  makefile  read_field.f90  sfg_calc.f90  spec_calc.f90  tcf.f90
src/Shared/: CMakeLists.txt  command_line_args.f90  data_mods.f90  input_module.f90  mapping_module.f90  read_all_field.f90  (+1 more)
(+5 files in other folders)
